fix: added max possible size to time input on mobile

--- a/src/components/TimeInput/styles.module.scss
+++ b/src/components/TimeInput/styles.module.scss
@@ -9,4 +9,10 @@
   svg{
     z-index: 2;
   }
+
+  @media(max-width:500px){
+    max-width: 100%;
+    min-width: 100%;
+    justify-content: space-between;
+  }
 }
